[gd_scene load_steps=11 format=3 uid="uid://dhs0smygvgici"]

[ext_resource type="Script" uid="uid://ohgsdbmhnjsy" path="res://scripts/firewall.gd" id="1_6kfvg"]
[ext_resource type="Texture2D" uid="uid://05nn6xgnx13b" path="res://sprites/interactions/fireball.png" id="2_d5r43"]
[ext_resource type="AudioStream" uid="uid://bh12w7wab8ywf" path="res://sounds/firewall_sound.mp3" id="3_d5r43"]
[ext_resource type="AudioStream" uid="uid://fn5564ea5u25" path="res://sounds/fireball_cast.mp3" id="4_jlspv"]
[ext_resource type="Texture2D" uid="uid://bgsnphgejpolv" path="res://images/white-light-mask.png" id="5_3bu2m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fq2r3"]
atlas = ExtResource("2_d5r43")
region = Rect2(27, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpo4s"]
atlas = ExtResource("2_d5r43")
region = Rect2(36, 0, 9, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8aks"]
atlas = ExtResource("2_d5r43")
region = Rect2(45, 0, 9, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgivj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq2r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpo4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8aks")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kgux"]
size = Vector2(17, 137)

[node name="firewall_left" type="Node2D"]
z_index = 1
script = ExtResource("1_6kfvg")

[node name="sprites" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7, -47)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17, -47)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -41.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -41.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -36.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D6" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -36.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D7" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -30.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D8" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -30.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D9" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -26.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D10" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -26.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D11" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -22.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D12" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -22.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D13" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -19.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D14" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -19.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D15" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -13.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D16" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -13.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D17" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -8.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D18" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -8.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D19" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, -2.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D20" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, -2.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D21" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 3.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D22" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 3.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D23" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 8.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D24" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 8.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D25" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 13.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D26" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 13.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D27" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 18.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D28" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 18.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D29" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 23.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D30" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 23.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D31" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 29.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D32" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 29.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D33" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 34.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D34" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 34.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D35" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 39.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D36" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 39.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D37" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 45.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D38" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 45.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D39" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 50.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D40" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 50.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D41" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 55.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D42" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 55.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D43" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 60.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D44" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 60.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D45" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 66.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D46" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 66.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D47" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 71.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D48" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 71.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D49" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 77.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D50" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 77.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D51" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 83.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D52" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 83.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D53" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(7.5, 83.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="AnimatedSprite2D54" type="AnimatedSprite2D" parent="sprites"]
position = Vector2(17.5, 83.5)
sprite_frames = SubResource("SpriteFrames_mgivj")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12.5, 17.5)
shape = SubResource("RectangleShape2D_8kgux")

[node name="fire_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_d5r43")
volume_db = -10.0

[node name="som_cast" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jlspv")
bus = &"EfeitoInteracao"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(13, -39)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(13, -5)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(13, 18)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D4" type="PointLight2D" parent="."]
position = Vector2(12, 38)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D5" type="PointLight2D" parent="."]
position = Vector2(12, 53)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D6" type="PointLight2D" parent="."]
position = Vector2(12, 67)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D7" type="PointLight2D" parent="."]
position = Vector2(12, -14)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D8" type="PointLight2D" parent="."]
position = Vector2(13, -46)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[node name="PointLight2D9" type="PointLight2D" parent="."]
position = Vector2(11, 79)
color = Color(1, 0.407843, 0, 1)
energy = 0.5
texture = ExtResource("5_3bu2m")
texture_scale = 0.3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
